--- a/debian/libc-client__VER__.config.in
+++ b/debian/libc-client__VER__.config.in
@@ -4,6 +4,6 @@
 . /usr/share/debconf/confmodule
 db_version 2.0
 
-db_input high libc-client/plaintext || true
+db_input high libc-client/no_maildir_warning || true
 db_go || true
 
