* Patch src/c-client/mail.c against remote exploitable buffer overflow   allowing attacker to execute arbitrary code - CAN-2005-2933. This   closes: bug#332215 (thanks to iDEFENCE and Martin Pitt   <martin.pitt@canonical.com>). * Add/update debconf l10n:   + Catalan (ca). Closes: Bug#248762 (thanks to Debian L10n Catalan     Team).   + Czech (cs). Closes: bug#313261 (thanks to Miroslav Kure     <kurem@upcase.inf.upol.cz>).   + French (fr). Closes: Bug#241986 (thanks to debian-l10n-french     mailing list contributors).   + Japanese (ja) Closes: Bug#241804 (thanks to Kenshi Muto     <kmuto@debian.org>).   + Spanish (es). Closes: bug#323375 (thanks to Carlos Galisteo de     Cabo <cgalisteo@k-rolus.net>),   + Swedish (sv). Closes: bug#333346 (thanks to Daniel Nylander     <yeager@lidkoping.net>).   + Turkish (tr). Closes: Bug#249129 (thanks to Mehmet Turker).   + Vietnamese (vi). Closes: bug#324073 (thanks to Vietnamese free-     software translation team / nhóm Việt hóa phần mềm tự     do). * Modernize maintainer scripts (thanks to lintian):   + Use `chown uid:gid` (not `chown uid.gid`).   + Use [ test1 ] && [ test2 ] (not [ test1 -a test2 ]). * Source debconf in libc-clientXXX postinst even if unused (thanks to   lintian). * Claim compliance with Policy 3.6.2 (no changes needed). * Set urgency=high due to security fix.

--- a/debian/control.in
+++ b/debian/control.in
@@ -2,13 +2,13 @@ Source: uw-imap
 Priority: optional
 Section: mail
 Maintainer: Jonas Smedegaard <dr@jones.dk>
-Standards-Version: 3.6.1
+Standards-Version: 3.6.2
 Build-Depends: cdbs, dh-buildinfo, libpam-dev, libkrb5-dev, comerr-dev, libssl-dev, debhelper (>= 4.1), d-shlibs (>> 0.13), perl
 
 Package: uw-imapd
 Section: mail
 Architecture: any
-Depends: ${shlibs:Depends}, ${debconf-depends}, openssl, libpam-runtime (>= 0.76-13.1)
+Depends: ${shlibs:Depends}, ${debconf-depends}, openssl, libpam-runtime (>= 0.76-13.1), netbase
 Recommends: exim4 | mail-transport-agent
 Suggests: mutt | imap-client, logcheck
 Provides: imap-server
@@ -30,7 +30,7 @@ Description: remote mail folder access server
 Package: ipopd
 Section: mail
 Architecture: any
-Depends: ${shlibs:Depends}, ${debconf-depends}, openssl, libpam-runtime (>= 0.76-13.1)
+Depends: ${shlibs:Depends}, ${debconf-depends}, openssl, libpam-runtime (>= 0.76-13.1), netbase
 Recommends: exim4 | mail-transport-agent
 Conflicts: imap (<< 4.4-1), pop3-server, pop2-server, logcheck (<< 1.1.1-9)
 Provides: pop3-server, pop2-server
@@ -42,6 +42,7 @@ Description: POP2 and POP3 servers from UW
  This server has SSL support built in.
 
 Package: libc-client-dev
+Priority: extra
 Section: libdevel
 Architecture: any
 Depends: libc-client__VER__ (= ${Source-Version}), ${devlibs:Depends}
