* Revert to older upstream 2007b, and instead bump epoc, as simplest   possible apporach to get back to old soname, needed for the frozen   Lenny. Thanks to Adeodato Simó for educating me about the problem   and coming up with the solution. * Add patch 0001 from newer 2007d release, fixing local exploitable   security hole in dmail and tmail. Thanks to Tomas Pospisek for   reporting. * Add patch 0002 from newer 2007d release, to not close already closed   smtp netstream. * Set urgency=medium due to soname fix (security issue already in   7:2007d~dfsg-1 and 7:2007b~dfsg-4+lenny1, so urgency=high unneeded.

--- a/debian/control
+++ b/debian/control
@@ -48,10 +48,10 @@ Description: POP2 and POP3 mail server
  This package contains ipopd, a POP2 and POP3 server daemon which uses
  the c-client library.
 
-Package: libc-client2007d-dev
+Package: libc-client2007b-dev
 Section: libdevel
 Architecture: any
-Depends: libc-client2007d (= ${binary:Version}), ${devlibs:Depends}
+Depends: libc-client2007b (= ${binary:Version}), ${devlibs:Depends}
 Conflicts: libc-client-dev
 Replaces: libc-client-dev
 Provides: libc-client-dev
@@ -67,7 +67,7 @@ Description: c-client library for mail protocols - development files
  This package contains the static c-client library and development
  headers.
 
-Package: libc-client2007d
+Package: libc-client2007b
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-modules, mlock
