--- a/debian/rules
+++ b/debian/rules
@@ -9,11 +9,6 @@ debian/control.in::
 	sed $(SEDRULE_CONTENT) <debian/control.in.in >debian/control.in
 
 # More info on local cdbs snippets: See debian/README.cdbs-tweaks
-ifneq (,$(DEB_MAINTAINER_MODE))
-  # Enable stuff not policy compliant (eg. unsuitable for build daemons)
-  DEB_COPYRIGHT_CHECK_STRICT = yes
-  DEB_AUTO_UPDATE_DEBIAN_CONTROL = yes
-endif
 include /usr/share/cdbs/1/class/langcore.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
@@ -24,7 +19,7 @@ include debian/cdbs/1/rules/upstream-tarball.mk
 DEB_UPSTREAM_URL = ftp://ftp.cac.washington.edu/mail
 DEB_UPSTREAM_PACKAGE = imap
 DEB_UPSTREAM_TARBALL_EXTENSION = tar.Z
-DEB_UPSTREAM_TARBALL_MD5 = 80cdf8366a69417818f4d73181f16b9d
+DEB_UPSTREAM_TARBALL_MD5 = 4d59ce6303cf8ef93ff51341b1ce2df7
 
 DEB_UPSTREAM_REPACKAGE_EXCLUDE = docs/rfc docs/draft src/osdep/mac/mtest.sit.hqx
 
@@ -193,5 +188,5 @@ CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), libpam-dev, libkrb5-dev, comerr-dev
 # Needed for our packaging routines
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), d-shlibs, perl, po-debconf
 
-# Merge duplicate build-dependencies
-include debian/cdbs/1/rules/package-relations.mk
+# Fix double cdbs build-dependencies
+CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed -e '/\bcdbs (>= 0.4.39)/ s/ *,* *\bcdbs (>= \(0.4.23-1.1\|0.4.27\)) *,* */, /g' -e 's/^ *, *//' -e 's/ *, *$$//')
